<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/login_to_continue"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/input_background"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_40sdp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/pickerCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFullName="false"
                app:ccp_contentColor="@color/primary_text"
                app:ccp_showNameCode="false"/>

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/opaque_gray"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/background_input_text"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

        </LinearLayout>




        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input_text"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textForgotYourPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/error"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>